k8s/pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-app
  namespace: pdf
  labels:
    app.kubernetes.io/name: pdf-app
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdf-app
      annotations:
    spec:
      volumes:
        - name: config
          configMap:
            name: mailslurper-config
        - name: cert
          secret:
            secretName: mailslurper-cert
      containers:
        - name: pdf-app
          image: "generalconsulting/pdf-app:latest"
          imagePullPolicy: Always
          ports:
            - name: http-pdf-app
              containerPort: 3000
              protocol: TCP
