k8s/pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-app
  namespace: pdf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pdf.test.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: pdf-app
                port:
                  number: 4444
